# televy-backup

./: .gitignore  AGENTS.md  Cargo.toml  README.md  biome.json  commitlint.config.cjs  lefthook.yml  package.json
.github/scripts/: compute-version.sh  freeze-release-intent.sh  label-gate.sh  release-intent.sh  test-release-scripts.sh
.github/workflows/: ci-main.yml  ci-pr.yml  ci.yml  label-gate.yml  notify-release-failure.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/migrations/: 0001_init.sql  0002_backup_query_indexes.sql  0003_retention_perf.sql  0004_endpoint_state.sql
crates/core/src/: backup.rs  bootstrap.rs  config.rs  config_bundle.rs  control.rs  crypto.rs  dedupe_catalog.rs  dedupe_sync.rs  error.rs  folder_compare.rs  gold_key.rs  index_db.rs  index_manifest.rs  index_sync.rs  lib.rs  pack.rs  progress.rs  remote_index_db.rs  restore.rs  run_log.rs  secrets.rs  status.rs  storage.rs
crates/core/src/storage/: telegram_mtproto.rs
crates/core/tests/: backup_pipeline.rs  mtproto_chunking_caps.rs  pack_uploads.rs  restore_verify.rs  televyignore.rs  upload_rate_limit.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: control_ipc.rs  main.rs  status_ipc.rs  vault_ipc.rs
crates/mtproto-helper/: Cargo.toml
crates/mtproto-helper/src/: main.rs
crates/mtproto-helper/tests/: process_shutdown.rs
docs/: architecture.md  quality-gates.md  requirements.md
docs/design/: README.md  system-architecture.md
docs/design/ui/: README.md  statusbar-popover-ia.md
docs/design/ui/settings-window/: _preview-popover-minimal.html
docs/design/ui/statusbar-popover-dashboard/: README.md  _preview-popover.html
docs/plan/: README.md
docs/plan/0001:telegram-backup-mvp/: PLAN.md
docs/plan/0001:telegram-backup-mvp/contracts/: README.md  db.md  events.md  file-formats.md  rpc.md
docs/plan/0002:small-object-packing/: PLAN.md
docs/plan/0002:small-object-packing/contracts/: README.md  db.md  file-formats.md  http-apis.md
docs/plan/0002:storage-telegram-botapi/: PLAN.md
docs/plan/0003:index-manifest-upload/: PLAN.md
docs/plan/0003:sync-logging-durability/: PLAN.md
docs/plan/0003:sync-logging-durability/contracts/: README.md  config.md  file-formats.md
docs/plan/0004:keychain-secrets/: PLAN.md
docs/plan/0004:telegram-mtproto-storage/: PLAN.md
docs/plan/0004:telegram-mtproto-storage/contracts/: README.md  cli.md  config.md  db.md  (+1 more)
docs/plan/0005:multi-backup-directories-keyed-restore/: PLAN.md
docs/plan/0005:scheduler-brew-services/: PLAN.md
docs/plan/0006:chunking-max-bytes/: PLAN.md
docs/plan/0006:ui-mvp/: PLAN.md
docs/plan/0007:background-pack-uploads/: PLAN.md
docs/plan/0007:restore-verify-mvp/: PLAN.md
docs/plan/0008:brew-distribution/: PLAN.md
docs/plan/0008:status-popup-file-logging/: PLAN.md
docs/plan/0009:endpoints-settings-page/: PLAN.md
docs/plan/0010:status-popover-dashboard/: PLAN.md
docs/plan/0011:daemon-status-ipc/: PLAN.md
docs/plan/0012:remote-first-index-sync/: PLAN.md
docs/plan/0013:mtproto-dialogs-picker/: PLAN.md
docs/plan/3ejpg:macos-dev-app-variant/: PLAN.md
docs/plan/4fexy:master-key-rotation/: PLAN.md
docs/plan/7bq4a:prod-backup-verify-stability/: PLAN.md
docs/plan/7f9wg:integrate-developer-diagnostics/: PLAN.md
docs/plan/7r6p4:background-backup-adaptive-throughput/: PLAN.md
docs/plan/dxddw:import-bundle-target-change-directory/: PLAN.md
docs/plan/fh5ac:fix-upload-rate-display/: PLAN.md
docs/plan/fn4ny:config-bundle-export-import/: PLAN.md
docs/plan/fwwqp:events-live-task-ui/: PLAN.md
docs/plan/kaa5e:targets-runs-main-window/: PLAN.md
docs/plan/kpmqp:fix-daemon-ipc-sockets/: PLAN.md
docs/plan/mycnc:status-down-rate/: PLAN.md
docs/plan/njr29:mtproto-upload-resilience/: PLAN.md
docs/plan/nvr79:avoid-keychain-in-dev/: PLAN.md
docs/plan/r6ceq:endpoint-scoped-index-chat-uniqueness/: PLAN.md
docs/plan/w2k9p:import-bundle-rebind-remote-compare/: PLAN.md
docs/specs/: README.md
docs/specs/2e73n-popover-targets-live-height/: SPEC.md
docs/specs/3rnws-main-window-target-backup-menu/: SPEC.md
docs/specs/3z7rj-endpoint-dedupe-delta-index/: SPEC.md
docs/specs/cac6x-mtproto-helper-idle-shutdown/: SPEC.md
docs/specs/dmts3-streaming-backup-pipeline/: SPEC.md
docs/specs/dyu56-index-tiered-filemaps/: SPEC.md
docs/specs/fdwoo-macos-light-dark-theme/: SPEC.md
docs/specs/g7gt3-televyignore-target-ignore/: SPEC.md
docs/specs/hqjd2-mtproto-transfer-speed/: SPEC.md
docs/specs/n2kbu-pr-label-release/: SPEC.md
docs/specs/t764g-endpoint-two-level-index/: SPEC.md
docs/specs/z324m-unified-backup-progress-prepare/: SPEC.md
docs/specs/zx5n2-release-failure-telegram-alerts/: SPEC.md
macos/TelevyBackupApp/: Appearance.swift  BackupProgressProjection.swift  ImportBundleRebindLogic.swift  MainWindow.swift  SettingsWindow.swift  StatusModels.swift  TargetDiagnosticsView.swift  TargetPresentation.swift  TelevyBackupApp.swift  UISnapshot.swift
macos/TelevyBackupAppTests/: BackupProgressProjectionTests.swift  ImportBundleRebindLogicTests.swift  PopoverLayoutSizeTests.swift  UIDemoSandboxPathTests.swift
packaging/: README.md
packaging/homebrew/: televybackup.rb  televybackupd.rb
scripts/macos/: build-app.sh  capture-backup-config-ui.sh  capture-main-window.sh  capture-settings-window.sh  capture-theme-ui.sh  run-app.sh  swift-unit-tests.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: app_config.rs  lib.rs  main.rs  rpc.rs  secrets.rs  task_manager.rs
web/: index.html  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
(+49 files in other folders)
