[package]
name = "televy_backup"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
televy_backup_core = { path = "../crates/core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
