[package]
name = "televybackup"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
getrandom = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
televy_backup_core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = "3"

