[package]
name = "televybackup"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
televy_backup_core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
