[package]
name = "televybackupd"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
televy_backup_core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = "3"
