[package]
name = "televybackupd"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
televy_backup_core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.5.1"

[dev-dependencies]
tempfile = "3"
