[package]
name = "televybackup-mtproto-helper"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
base64 = "0.22"
blake3 = "1"
grammers-client = "0.8"
grammers-mtsender = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
